# startup_researcher

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  startups.db
